--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "html-pdf": "^3.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
     "multer": "^1.4.5-lts.1",
